# next24-gemma-fine-tune-and-deploy

./: README.md
cloud-run/: langserve-gemma.yaml
k8s-manifests/: gemma-7b-tgi.yaml  gemma-dolly-tgi.yaml
langserve-gemma/: README.md  pyproject.toml
langserve-gemma/app/: requirements.txt  server.py
